examples/negative/pipes/pipe_no_map/main.kai
# Issue #594 consumer for the no-map negative fixture. The pipe
# below must reject with the "module declares X but does not export
# map" diagnostic, not a generic call-inference signature mismatch.

import box

fn main() : Int {
  let b = MkBox(7)
  let r = b | (n) => n + 1
  0
}
